<resources>
    <string name="app_name">TexMob</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="SampleValue">Sample</string>
    <string name="HintLatexInput">Type LaTeX here...</string>
    <string name="title_activity_home">Home</string>
    <string name="homeInstructions">Create new \n or \n long-click on an existing file on the left for more options.</string>
    <string name="buttonDelText">Delete</string>
    <string name="buttonOpenText">Open</string>
    <string name="buttonNewText">New</string>
    <string name="buttonSaveCodeText">Save Code</string>
    <string name="buttonTypesetText">Typeset</string>
    <string name="buttonClearText">Clear</string>
    <string name="buttonExportMathText">Export</string>
    <string name="buttonHomeText">Home</string>
    <string name="title_activity_help_tutorial">HelpTutorial</string>

    <!-- Tutorial instructions -->
    <string name="tutorial1Text">
        First, create a new file or choose an existing one from the list on your left to open, rename, or to delete it.</string>
    <string name="tutorial2Text">
        Type your LaTeX code where indicated.
        Press Save Code to save your changes in the code.
        Press Typeset to generate the image.    </string>
    <string name="tutorial3Text">
        Press Clear if you are sure you want to delete everything.
        Press Export to save the image to your Photos.
        Press Home to go back to Home screen.
    </string>
    <string name="buttonRenameText">Rename</string>
    <string name="buttonHelpText">Help</string>
</resources>
