<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ebookfrenzy.finalproject.Home"
    android:background="#1C1C1C">


        <ListView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:id="@+id/list"
            android:layout_weight="1"
            android:scrollingCache="true"
            android:smoothScrollbar="true"
            android:choiceMode="singleChoice"
            android:background="#FFFFFF"
            android:clickable="true"
            android:listSelector="#2E5B91"
            android:fastScrollAlwaysVisible="false"
            android:divider="#152941"
            android:dividerHeight="@dimen/abc_control_inset_material"
            android:fastScrollEnabled="true" />

        <GridLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="right"
            android:paddingLeft="@dimen/abc_action_bar_default_padding_material"
            android:background="#152941">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/homeInstructions"
                android:id="@+id/instructions"
                android:layout_weight="1.05"
                android:textColor="#FFFFFF"
                android:layout_gravity="center_vertical"
                android:gravity="center|center_vertical|center_horizontal"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_rowSpan="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonNewText"
                android:id="@+id/buttonNew"
                android:layout_row="2"
                android:layout_column="0"
                android:background="#1C1C1C"
                android:textColor="#FFFFFF"
                android:layout_gravity="fill_horizontal"
                android:onClick="openNew"
                android:clickable="true"
                android:nestedScrollingEnabled="false"
                android:layout_rowSpan="1" />

            <Button
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonHelpText"
                android:id="@+id/buttonHelp"
                android:layout_row="2"
                android:layout_column="1"
                android:background="#1C1C1C"
                android:textColor="#848484"
                android:textStyle="italic"
                android:onClick="openHelpTutorial"
                android:clickable="true" />

        </GridLayout>


</LinearLayout>
